--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,7 +22,8 @@ body {
   background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: calc(100vh - 2 * 4vw); }
+  min-height: calc(100vh - 2 * 4vw); 
+}
 
 .container {
   max-width: 120rem;
