--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,10 @@
 *::after {
   box-sizing: inherit; }
 
+.spinner {
+  height: 12px;
+  width: 15px; }
+
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
@@ -22,8 +26,7 @@ body {
   background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: calc(100vh - 2 * 4vw); 
-}
+  min-height: calc(100vh - 2 * 4vw); }
 
 .container {
   max-width: 120rem;
